# sorux-bot-app

./: .gitignore  components.d.ts  package.json  pnpm-lock.yaml  tsconfig.json  uno.config.ts  vite.config.ts
src/: App.vue  main.ts  style.css
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/src/: command.rs  global_channels.rs  global_constants.rs  main.rs  provider.rs  wrapper.rs
src/components/: HelloWorld.vue  PluginUpload.vue
src/layout/: BasicLayout.vue
src/layout/components/: SidebarMenu.vue
src/pages/: Home.vue  Login.vue  PluginList.vue  Terminal.vue
src/router/: index.ts
src/store/: userStore.ts
src/types/: Items.ts
src/utils/: globals.ts
