[package]
name = "sorux-bot-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["forDece"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2.3"
base64 = "0.22.1"
lazy_static = "1.4"
crossbeam = "0.8.4"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
